--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
-    "next": "14.2.15",
+    "next": "^15.5.0",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
